# bcm3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  external_dependency_locations_template.txt
dependencies/HungarianAlgorithm-master/: CMakeLists.txt  changes_for_bcm.txt  matching.cpp  matching.h
dependencies/expat-2.6.0/: CMakeLists.txt
dependencies/expat-2.7.3/: CMakeLists.txt  changes_for_bcm.txt
dependencies/hungarian2/: CMakeLists.txt  changes_for_bcm.txt  hungarian.cpp  hungarian.h
dependencies/libsbml-5.20.2/: CMakeLists.txt  changes_for_bcm.txt
src/bcminf/: CMakeLists.txt  main.cpp
src/bcmopt/: CMakeLists.txt  main.cpp
src/bcmrbridge/: CMakeLists.txt  definitions.def  definitions_cellpop.def  definitions_fISA.def  interface.cpp  interface.h  interface_ODE.cpp  interface_PK.cpp  interface_cellpop.cpp  interface_dynamicISA.cpp  interface_fISA.cpp  interface_incucyte.cpp  interface_pharmaco_population.cpp  interface_pharmaco_single.cpp  interface_popPK.cpp
src/cellpop/: CMakeLists.txt  Cell.cpp  Cell.h  CellPopulation.cpp  CellPopulation.h  CellPopulationLikelihood.cpp  CellPopulationLikelihood.h  DataLikelihoodBase.cpp  DataLikelihoodBase.h  DataLikelihoodDuration.cpp  DataLikelihoodDuration.h  DataLikelihoodTimeCourse.cpp  DataLikelihoodTimeCourse.h  DataLikelihoodTimeCourseBase.cpp  DataLikelihoodTimeCourseBase.h  DataLikelihoodTimeCoursePopulationAverage.cpp  DataLikelihoodTimeCoursePopulationAverage.h  DataLikelihoodTimePoints.cpp  DataLikelihoodTimePoints.h  Experiment.cpp  Experiment.h  SolverCodeGenerator.cpp  SolverCodeGenerator.h  TreatmentTrajectory.cpp  TreatmentTrajectory.h  TreatmentTrajectoryFromData.cpp  TreatmentTrajectoryFromData.h  TreatmentTrajectoryPulses.cpp  TreatmentTrajectoryPulses.h  ValueReference.cpp  ValueReference.h  VariabilityDescription.cpp  VariabilityDescription.h  VariabilityDescriptionVariable.cpp  VariabilityDescriptionVariable.h  VariabilityPseudoRandomIterator.cpp  VariabilityPseudoRandomIterator.h
src/dynamicISA/: CMakeLists.txt  SignalingLink.cpp  SignalingLink.h  SignalingModel.cpp  SignalingModel.h  SignalingMolecule.cpp  SignalingMolecule.h  dynamicISAExperiment.cpp  dynamicISAExperiment.h  dynamicISALikelihood.cpp  dynamicISALikelihood.h
src/fISA/: CMakeLists.txt  SignalingNetwork.cpp  SignalingNetwork.h  fISAExperiment.cpp  fISAExperiment.h  fISAExperimentDrugRange.cpp  fISAExperimentDrugRange.h  fISAExperimentIncucyteSequential.cpp  fISAExperimentIncucyteSequential.h  fISAExperimentSingleCondition.cpp  fISAExperimentSingleCondition.h  fISALikelihood.cpp  fISALikelihood.h
src/likelihoods/: CMakeLists.txt  LikelihoodCellCycleMarker.cpp  LikelihoodCellCycleMarker.h  LikelihoodDLL.cpp  LikelihoodDLL.h  LikelihoodDummy.cpp  LikelihoodDummy.h  LikelihoodFactory.cpp  LikelihoodFactory.h  LikelihoodIncucytePopulation.cpp  LikelihoodIncucytePopulation.h  LikelihoodMitosisTimeEstimation.cpp  LikelihoodMitosisTimeEstimation.h  LikelihoodODE.cpp  LikelihoodODE.h  LikelihoodPharmacokineticTrajectory.cpp  LikelihoodPharmacokineticTrajectory.h  LikelihoodPopPKTrajectory.cpp  LikelihoodPopPKTrajectory.h  TestLikelihoodBanana.cpp  TestLikelihoodBanana.h  TestLikelihoodCircular.cpp  TestLikelihoodCircular.h  TestLikelihoodMultimodalGaussians.cpp  TestLikelihoodMultimodalGaussians.h  TestLikelihoodTruncatedT.cpp  TestLikelihoodTruncatedT.h
src/odecommon/: CMakeLists.txt  CVODESolver.cpp  CVODESolver.h  CVODESolverDelay.cpp  CVODESolverDelay.h  LinearAlgebraSelector.cpp  LinearAlgebraSelector.h  ODESolver.cpp  ODESolver.h  ODESolverCVODE.cpp  ODESolverCVODE.h  ODESolverDP5.cpp  ODESolverDP5.h  nvector_serial_eigen.cpp  nvector_serial_eigen.h  sunlinsol_dense_eigen.cpp  sunlinsol_dense_eigen.h  sunlinsol_sparse_eigen.cpp  sunlinsol_sparse_eigen.h  sunmatrix_dense_eigen.cpp  sunmatrix_dense_eigen.h  sunmatrix_sparse_eigen.cpp  sunmatrix_sparse_eigen.h
src/pharmaco/: CMakeLists.txt  DrugConstants.h  PharmacoLikelihoodPopulation.cpp  PharmacoLikelihoodPopulation.h  PharmacoLikelihoodSingle.cpp  PharmacoLikelihoodSingle.h  PharmacoPatient.cpp  PharmacoPatient.h  PharmacokineticModel.cpp  PharmacokineticModel.h
src/sampler/: BlockingStrategy.cpp  BlockingStrategy.h  BlockingStrategyClusteredTurek.cpp  BlockingStrategyClusteredTurek.h  BlockingStrategyNoBlocking.cpp  BlockingStrategyNoBlocking.h  BlockingStrategyOneBlock.cpp  BlockingStrategyOneBlock.h  BlockingStrategyTurek.cpp  BlockingStrategyTurek.h  CMakeLists.txt  DataReference.cpp  DataReference.h  GMM.cpp  GMM.h  Likelihood.cpp  Likelihood.h  MultivariateMarginal.cpp  MultivariateMarginal.h  Prior.cpp  Prior.h  PriorIndependence.cpp  PriorIndependence.h  ProgressIndicator.cpp  ProgressIndicator.h  ProgressIndicatorConsole.cpp  ProgressIndicatorConsole.h  Proposal.cpp  Proposal.h  ProposalClusteredCovariance.cpp  ProposalClusteredCovariance.h  ProposalGaussianMixture.cpp  ProposalGaussianMixture.h  ProposalGaussianMixtureFitInR.cpp  ProposalGaussianMixtureFitInR.h  ProposalGlobalCovariance.cpp  ProposalGlobalCovariance.h  ProposalParametricMixture.cpp  ProposalParametricMixture.h  SampleHandler.h  (+24 more)
src/sbml/: CMakeLists.txt  SBMLAssignmentRule.cpp  SBMLAssignmentRule.h  SBMLModel.cpp  SBMLModel.h  SBMLModelParameters.cpp  SBMLModelParameters.h  SBMLRatelaws.cpp  SBMLRatelaws.h  SBMLReaction.cpp  SBMLReaction.h  SBMLSpecies.cpp  SBMLSpecies.h
src/stats/: CMakeLists.txt  GMM.cpp  GMM.h  checks.cpp  checks.h  mvn.cpp  mvn.h  mvt.cpp  mvt.h
src/testing/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  CSVParser.cpp  CSVParser.h  Clustering.cpp  Clustering.h  Correlation.cpp  Correlation.h  Debug.h  EigenPartialPivLUSomewhatSparse.h  Logger.cpp  Logger.h  MathFunctions.cpp  MathFunctions.h  NetCDFBundler.cpp  NetCDFBundler.h  NetCDFDataFile.cpp  NetCDFDataFile.h  Platform.h  ProbabilityDistributions.cpp  ProbabilityDistributions.h  RNG.cpp  RNG.h  Spinlock.h  SummaryStats.cpp  SummaryStats.h  TaskManager.cpp  TaskManager.h  Timer.h  Typedefs.h  Utils.cpp  Utils.h  VectorUtils.cpp  VectorUtils.h  Version.h
tests/stats/: CMakeLists.txt  GMM.cpp  init_boost_test.cpp  (+2 more)
(+65 files in other folders)
