add_library(sampler)

target_sources(sampler
  PRIVATE
    DataReference.h
    DataReference.cpp
    Likelihood.h
    Likelihood.cpp
    Prior.h
    Prior.cpp
    PriorIndependence.h
    PriorIndependence.cpp
    ProgressIndicator.h
    ProgressIndicator.cpp
    ProgressIndicatorConsole.h
    ProgressIndicatorConsole.cpp
    Proposal.h
    Proposal.cpp
    ProposalGlobalCovariance.h
    ProposalGlobalCovariance.cpp
    ProposalParametricMixture.h
    ProposalParametricMixture.cpp
    BlockingStrategy.h
    BlockingStrategy.cpp
    BlockingStrategyNoBlocking.h
    BlockingStrategyNoBlocking.cpp
    BlockingStrategyOneBlock.h
    BlockingStrategyOneBlock.cpp
    BlockingStrategyTurek.h
    BlockingStrategyTurek.cpp
    SampleHandler.h
    SampleHandler.cpp
    SampleHandlerNetCDF.h
    SampleHandlerNetCDF.cpp
    SampleHandlerStoreMaxAPosteriori.h
    SampleHandlerStoreMaxAPosteriori.cpp
    SampleHandlerTSV.h
    SampleHandlerTSV.cpp
    SampleHistory.h
    SampleHistory.cpp
    Sampler.h
    Sampler.cpp
    SamplerFactory.h
    SamplerFactory.cpp
    SamplerIS.h
    SamplerIS.cpp
    SamplerPT.h
    SamplerPT.cpp
    SamplerPTChain.h
    SamplerPTChain.cpp
    UnivariateMarginal.h
    UnivariateMarginal.cpp
    VariableSet.h
    VariableSet.cpp
)

target_include_directories(sampler
  PUBLIC
    .
)

target_link_libraries(sampler
  PUBLIC
    utils
    stats
)

set_target_properties(sampler PROPERTIES DEBUG_POSTFIX d)
target_precompile_headers(sampler PRIVATE ../utils/Utils.h)